[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swb2-modelrunner"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "CC0-1.0"
keywords = []
authors = [
  { name = "Steve Westenbroek", email = "smwesten@usgs.gov" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Steve Westenbroek/swb2-modelrunner#readme"
Issues = "https://github.com/Steve Westenbroek/swb2-modelrunner/issues"
Source = "https://github.com/Steve Westenbroek/swb2-modelrunner"

[tool.hatch.version]
path = "src/swb2_modelrunner/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/swb2_modelrunner tests}"

[tool.coverage.run]
source_pkgs = ["swb2_modelrunner", "tests"]
branch = true
parallel = true
omit = [
  "src/swb2_modelrunner/__about__.py",
]

[tool.coverage.paths]
swb2_modelrunner = ["src/swb2_modelrunner", "*/swb2-modelrunner/src/swb2_modelrunner"]
tests = ["tests", "*/swb2-modelrunner/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
